# LayerForge

./: .gitignore  README.md  pyproject.toml
.claude/: README.md  settings.json
docs/: 01_overview.md  02_axiom_sources.md  03_extracted_formulas.md  04_test_cases.md  05_integration_design.md  05b_skill_design.md  06_decision_log.md  08_empirical_findings.md  REFERENCES.md  verifications_index_v9.md
docs/paper/: README.md
layerforge/: __init__.py  constants.py  exceptions.py  pipeline.py
layerforge/cli/: __init__.py  compress.py  decide.py  decompose.py  state.py  validate_output.py
layerforge/core/: __init__.py  community.py  cpm_backend.py  distillation.py  hierarchical.py  modularity.py  relations.py  scale_finder.py
layerforge/inference/: __init__.py  embedding.py  llm_client.py  parse.py  prompts.py  render.py  validation.py
layerforge/schema/: __init__.py  input_schema.py  intermediate.py  llm_schemas.py  output_schema.py
paper/v9/: peer_review.md
scripts/: benchmark.py  verify_real_data.py  verify_real_data_results.json
scripts/compress_demo/: README.md  compressed.json  compressed_q2.json  compressed_q2_mpnet.json  compressed_q3.json  verbose_response.txt
scripts/halluc_benchmark/: __init__.py  analyze.py  build_judge_prompts.py  build_prompts.py  corpus.py  corpus_large.py  router.py  run_prep.py  run_prep_large.py
scripts/k_sweep/: README.md  corpora.py  correlation_data.py  cpm_compare.py  generate_paper_figures.py  heatmap_N_x_K.py  k10_multi_corpus.py  multi_corpus_verify.py  multi_corpus_verify_v2.py  run.py  (+3 more)
tests/: conftest.py
(+106 files in other folders)
