[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layerforge"
version = "0.1.0"
description = "4±1 layer decomposition with deterministic core and inference boundaries"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ChaiCroquis" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Per ADR-014 (v5), the primary path is Claude Code skill + CLI. The extras
# below are for the future standalone-library path retained as an option.
sca = [
    "umap-learn>=0.5",
    "hdbscan>=0.8.33",
]
embeddings = [
    "sentence-transformers>=2.7",
]
api = [  # standalone-library future option; not exercised by the skill flow
    "anthropic>=0.80",
    "sentence-transformers>=2.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
]

[project.scripts]
layerforge-decompose = "layerforge.cli.decompose:main"
layerforge-decide = "layerforge.cli.decide:main"
layerforge-compress = "layerforge.cli.compress:main"
layerforge-validate-output = "layerforge.cli.validate_output:main"

[tool.setuptools.packages.find]
include = ["layerforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
